[package]
name = "comma-cache"
version = "0.1.0"
edition = "2024"
description = "A tool to manipulate comma choice cache."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MiSawa/comma-cache.git"

[dependencies]
bitcode = "0.6.6"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6"
itertools = "0.14.0"
tempfile = "3.27.0"
xdg = "3.0.0"
